...

            <com.example.util.simpletimetracker.feature_views.RecordTypeView
                android:id="@+id/previewChangeRecordType"
                style="@style/RecordTypeItem"
                app:itemColor="?appUntrackedColor"
...

            <com.example.util.simpletimetracker.feature_views.ButtonIconView
                android:id="@+id/btnChangeRecordTypeStatistics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                app:itemButtonIconRes="@drawable/statistics"
                app:itemButtonIconText="@string/shortcut_navigation_statistics"
                app:layout_constraintEnd_toStartOf="@id/btnChangeRecordTypeArchive"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dividerChangeRecordTypePreview"
...
                app:itemButtonIconRes="@drawable/archive"
                app:itemButtonIconText="@string/settings_archive"
                app:layout_constraintEnd_toStartOf="@id/btnChangeRecordTypeDelete"
                app:layout_constraintStart_toEndOf="@id/btnChangeRecordTypeStatistics"
                app:layout_constraintTop_toBottomOf="@id/dividerChangeRecordTypePreview"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etChangeRecordTypeName"
                    style="@style/ChangeItemNameEditText"
                    android:layout_width="match_parent"
...
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/change_record_type_color_hint"
                        app:layout_constraintEnd_toStartOf="@id/layoutChangeRecordTypeColorPreview"
                        app:layout_constraintStart_toStartOf="parent" />
...

            <androidx.cardview.widget.CardView
                android:id="@+id/fieldChangeRecordTypeIcon"
                style="@style/InputFieldCard"
                android:layout_width="0dp"
...
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/change_record_type_icon_image_hint"
                        app:layout_constraintEnd_toStartOf="@id/layoutChangeRecordTypeIconPreview"
                        app:layout_constraintStart_toStartOf="parent" />
...
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/category_hint"
                        app:layout_constraintEnd_toStartOf="@id/layoutChangeRecordTypeCategoriesPreview"
                        app:layout_constraintStart_toStartOf="parent" />
...

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvChangeRecordTypeGoalHint"
                        style="@style/EditScreenField"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/change_record_type_goal_time_hint"
                        app:layout_constraintEnd_toStartOf="@id/layoutChangeRecordTypeGoalPreview"
                        app:layout_constraintStart_toStartOf="parent" />
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etChangeRecordTypeNote"
                    style="@style/EditTextMultiLine"
                    android:layout_width="match_parent"
...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChangeRecordTypeColor"
        style="@style/EditScreenContainer"
        android:layout_width="match_parent"
...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChangeRecordTypeCategories"
        style="@style/EditScreenContainer"
        android:layout_width="match_parent"
...
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/edit_screen_margin_horizontal"
        android:text="@string/change_record_type_save"
        app:layout_constraintBottom_toBottomOf="parent" />

...
