...

    <string name="activity_hint">Activities</string>
    <string name="category_hint">Categories</string>
    <string name="record_tag_hint">Record tags</string>
    <string name="record_tag_hint_short">Tags</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="something_selected">Selected</string>
    <string name="something_available">Available</string>
    <string name="something_preselected">Preselected</string>
    <string name="select_all">Select all</string>
    <string name="select_nothing">Select nothing</string>
    <string name="no_data">No data</string>
    <string name="general_error">Something went wrong. Please try again or restart the app.</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
...
    <string name="hide_finished_goals">Hide finished goals</string>
    <string name="goal_add_hint">Edit activity or category to assign goal to it</string>

    <!--  Categories  -->
    <string name="categories_title">Categories and tags</string>
    <string name="categories_edit_hint">Click on card to edit</string>
    <string name="categories_record_type_hint">Assign the same category to different activities to view their grouped statistics</string>
    <string name="categories_record_hint">Assign different tags to records to differentiate between them</string>
    <string name="categories_add_category">Add category</string>
    <string name="categories_add_record_tag">Add record tag</string>
    <string name="categories_show_relations">Show relations</string>
    <string name="categories_and_tags_hint"><![CDATA[
<b>Categories</b> help you group related activities. For example:<br><br>
...
    <string name="change_record_type_icon_emoji_hint">Emoji</string>
    <string name="change_record_type_icon_search_hint">Search (in English)</string>
    <string name="change_record_type_no_icon">No icon</string>
    <string name="change_record_favourite_icons_hint">Favourite icons</string>
    <string name="change_record_type_save">Save</string>
    <string name="change_record_message_choose_name">Choose a name</string>
    <string name="change_record_message_name_exist">Name already used</string>
    <string name="change_record_type_note_hint">Note</string>
    <string name="change_record_type_categories_empty">No categories added</string>
    <string name="change_record_type_goal_time_disabled">Disabled</string>
    <string name="change_record_type_goal_time_hint">Goal</string>
    <string name="change_record_type_limit_time_hint">Limit</string>
    <string name="change_record_type_additional_hint">Additional</string>
...
    <string name="types_filter_hide_all">Hide all</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="chart_filter_type_hint">Filter type</string>
    <string name="chart_filter_categories_empty">No tags added</string>

    <string name="duration_dialog_save">Save</string>
    <string name="duration_dialog_disable">Disable</string>

    <string name="color_selection_base_color_hint">Select base color</string>
    <string name="color_selection_adjust_color_hint">Adjust color</string>
    <string name="color_selection_final_color_hint">Final color</string>

...
    <string name="running_records_empty">Click on activity to start tracking</string>
    <string name="running_records_empty_inverted">Long click on activity to start tracking</string>
    <string name="running_records_has_timers">Click on card to stop tracking</string>
    <string name="running_records_has_timers_inverted">Long click on card to stop tracking</string>
    <string name="running_records_empty_hint">Long click to edit</string>
    <string name="running_records_empty_hint_inverted">Click to edit</string>
    <string name="running_records_add_type">Add</string>
    <string name="running_records_add_filter">Add filter</string>
    <string name="running_records_add_default">Default</string>
    <string name="running_records_repeat">Repeat</string>
    <string name="running_records_repeat_no_prev_record">No previous record to restart</string>
    <string name="running_records_repeat_already_tracking">Already tracking this activity</string>

...
