...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNumberKeyboard1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="1"
        android:textStyle="bold"
...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="8"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvNumberKeyboard0"
        app:layout_constraintEnd_toStartOf="@id/tvNumberKeyboard9"
        app:layout_constraintStart_toEndOf="@id/tvNumberKeyboard7"
        app:layout_constraintTop_toBottomOf="@id/tvNumberKeyboard5"
        tools:ignore="HardcodedText"
        tools:textColor="@color/black"
        tools:textSize="32sp" />
...
