<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerChangeRecordTypeGoalCard"
    style="@style/SettingsCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/edit_screen_margin_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
...
                    android:id="@+id/fieldRecordTypeGoalType"
                    style="@style/InputFieldCard"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/input_field_height"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    app:layout_constraintEnd_toStartOf="@id/fieldChangeRecordTypeGoalDuration"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...
